tests/data/dos/appprotect-dos-arb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-appprotect-dos-arb
spec:
  selector:
    app: appprotect-dos-arb
  ports:
    - name: arb
      port: 3000
      protocol: TCP
      targetPort: 3000
  clusterIP: None
