tests/data/dos/appprotect-dos-arb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appprotect-dos-arb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appprotect-dos-arb
  template:
    metadata:
      labels:
        app: appprotect-dos-arb
    spec:
      containers:
      - name: appprotect-dos-arb
        image: docker-registry.nginx.com/nap-dos/app_protect_dos_arb:1.2.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1001
          capabilities:
            drop:
              - ALL
