tests/data/dos/dos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dos-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    appprotectdos.f5.com/app-protect-dos-resource: "dos-policy"
spec:
  tls:
  - hosts:
    - dos.example.com
    secretName: dos-secret
  rules:
  - host: dos.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
