tests/data/dos/dos-logconf.yaml
apiVersion: appprotectdos.f5.com/v1beta1
kind: APDosLogConf
metadata:
  name: doslogconf
spec:
  content:
    format: splunk
    max_message_size: 64k
  filter:
    traffic-mitigation-stats: all
    bad-actors: top 10
    attack-signatures: top 10
