tests/data/dos/dos-protected.yaml
apiVersion: appprotectdos.f5.com/v1beta1
kind: DosProtectedResource
metadata:
  name: dos-protected
spec:
  enable: true
  name: "name"
  apDosPolicy: "<NAMESPACE>/dospolicy"
  apDosMonitor:
    uri: "dos.example.com"
    protocol: "http1"
    timeout: 5
  dosAccessLogDest: "accesslog-svc.<NAMESPACE>.svc.cluster.local:514"
  dosSecurityLog:
    enable: true
    apDosLogConf: "<NAMESPACE>/doslogconf"
    dosLogDest: "syslog-svc.<NAMESPACE>.svc.cluster.local:514"
  allowList:
    - ipWithMask: "10.10.10.10/32"
